5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4184/executions/1679_1105.log
== TEST (2019-04-30 12:45:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("nome: ")
print("Entrada:" ,m)

if (m==lobo):
	print("Casa: Stark")
elif (m==leao):
	print("Casa: Lannister")
elif (m==veado):
	print("Casa: Baratheon")
elif (m==dragao):
	print("Casa: Targaryen")
elif (m==rosa):
	print("Casa: Tyrell")
elif (m==sol):
	print("Casa: Martell")
elif (m==lula):
	print("Casa: Greyjoy")
elif (m==estofado):
	print("Casa: Bolton")
elif (m==turta):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (m==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:49:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("nome: ")
print("Entrada:" ,m)

if (m == lobo):
	print("Casa: Stark")
elif (m == leao):
	print("Casa: Lannister")
elif (m == veado):
	print("Casa: Baratheon")
elif (m == dragao):
	print("Casa: Targaryen")
elif (m == rosa):
	print("Casa: Tyrell")
elif (m == sol):
	print("Casa: Martell")
elif (m == lula):
	print("Casa: Greyjoy")
elif (m == estofado):
	print("Casa: Bolton")
elif (m == turta):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (m == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:58:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("nome: ")
print("Entrada:" ,m)

if (m == lobo):
	print("Casa: Stark")
elif (m == leao):
	print("Casa: Lannister")
elif (m == veado):
	print("Casa: Baratheon")
elif (m == dragao):
	print("Casa: Targaryen")
elif (m == rosa):
	print("Casa: Tyrell")
elif (m == sol):
	print("Casa: Martell")
elif (m == lula):
	print("Casa: Greyjoy")
elif (m == estofado):
	print("Casa: Bolton")
elif (m == turta):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (m == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:59:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("nome: ")
print("Entrada:" ,m)

if (m == Lobo):
	print("Casa: Stark")
elif (m == leao):
	print("Casa: Lannister")
elif (m == veado):
	print("Casa: Baratheon")
elif (m == dragao):
	print("Casa: Targaryen")
elif (m == rosa):
	print("Casa: Tyrell")
elif (m == sol):
	print("Casa: Martell")
elif (m == lula):
	print("Casa: Greyjoy")
elif (m == estofado):
	print("Casa: Bolton")
elif (m == turta):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (m == Lobo):
NameError: name 'Lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:01:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("Nome: ")
print("Entrada:" ,m)

if (m == Lobo):
	print("Casa: Stark")
elif (m == leao):
	print("Casa: Lannister")
elif (m == veado):
	print("Casa: Baratheon")
elif (m == dragao):
	print("Casa: Targaryen")
elif (m == rosa):
	print("Casa: Tyrell")
elif (m == sol):
	print("Casa: Martell")
elif (m == lula):
	print("Casa: Greyjoy")
elif (m == estofado):
	print("Casa: Bolton")
elif (m == turta):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (m == Lobo):
NameError: name 'Lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:01:53) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("Nome: ")
print("Entrada:" ,m)

if (m == 'Lobo'):
	print("Casa: Stark")
elif (m == leao):
	print("Casa: Lannister")
elif (m == veado):
	print("Casa: Baratheon")
elif (m == dragao):
	print("Casa: Targaryen")
elif (m == rosa):
	print("Casa: Tyrell")
elif (m == sol):
	print("Casa: Martell")
elif (m == lula):
	print("Casa: Greyjoy")
elif (m == estofado):
	print("Casa: Bolton")
elif (m == turta):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif (m == leao):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:02:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("Nome: ")
print("Entrada:" ,m)

if (m == 'Lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:03:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("Nome: ")
print("Entrada:" ,m)

if (m == 'Lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- EXECUTION TIME:
0.212833
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:03:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("Nome: ")
print("Entrada:" ,m)

if (m == 'Lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:03:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("Nome: ")
print("Entrada:" ,m)

if (m == 'Lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- EXECUTION TIME:
0.141116
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:03:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("Nome: ")
print("Entrada:" ,m)

if (m == 'Lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:04:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("Nome: ")
print("Entrada:" ,m)

if (m == 'Lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- EXECUTION TIME:
0.210173
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:05:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("Nome: ")
print("Entrada:" ,m)

if (m == 'Lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:05:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("Nome: ")
print("Entrada:" ,m)

if (m == 'Lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- EXECUTION TIME:
0.128274
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:06:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("CRLHHHHHHH: ")
print("Entrada:" ,m)

if (m == 'Lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:06:52) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("CRLHHHHHHH: ")
print("Entrada:" ,m)

if (m == 'Lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- EXECUTION TIME:
0.150033
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:07:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("CRLHHHHHHH: ")
print("Entrada:" ,m)

if (m == 'lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:07:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("CRLHHHHHHH: ")
print("Entrada:" ,m)

if (m == 'lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:07:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("CRLHHHHHHH: ")
print("Entrada:" ,m)

if (m == 'lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:07:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("CRLHHHHHHH: ")
print("Entrada:" ,m)

if (m == 'lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:07:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("CRLHHHHHHH: ")
print("Entrada:" ,m)

if (m == 'lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:08:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("CRLHHHHHHH: ")
print("Entrada:" ,m)

if (m == 'lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:08:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("CRLHHHHHHH: ")
print("Entrada:" ,m)

if (m == 'lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:09:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("CRLHHHHHHH: ")
print("Entrada:" ,m)

if (m == 'lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- EXECUTION TIME:
0.237831
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:09:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("CRLHHHHHHH: ")
print("Entrada:" ,m)

if (m == 'lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:09:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("CRLHHHHHHH: ")
print("Entrada:" ,m)

if (m == 'lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:09:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("CRLHHHHHHH: ")
print("Entrada:" ,m)

if (m == 'lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'estofado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:10:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("CRLHHHHHHH: ")
print("Entrada:" ,m)

if (m == 'lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'esfolado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:10:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("CRLHHHHHHH: ")
print("Entrada:" ,m)

if (m == 'lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'esfolado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:10:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("CRLHHHHHHH: ")
print("Entrada:" ,m)

if (m == 'lobo'):
	print("Casa: Stark")
elif (m == 'leao'):
	print("Casa: Lannister")
elif (m == 'veado'):
	print("Casa: Baratheon")
elif (m == 'dragao'):
	print("Casa: Targaryen")
elif (m == 'rosa'):
	print("Casa: Tyrell")
elif (m == 'sol'):
	print("Casa: Martell")
elif (m == 'lula'):
	print("Casa: Greyjoy")
elif (m == 'esfolado'):
	print("Casa: Bolton")
elif (m == 'turta'):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- EXECUTION TIME:
0.138581
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:12:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("CRLHHHHHHH: ")
print("Entrada:" ,m)

if (m == "lobo"):
	print("Casa: Stark")
elif (m == "leao"):
	print("Casa: Lannister")
elif (m == "veado"):
	print("Casa: Baratheon")
elif (m == "dragao"):
	print("Casa: Targaryen")
elif (m == "rosa"):
	print("Casa: Tyrell")
elif (m == "sol"):
	print("Casa: Martell")
elif (m == "lula"):
	print("Casa: Greyjoy")
elif (m == "esfolado"):
	print("Casa: Bolton")
elif (m == "turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:12:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("CRLHHHHHHH: ")
print("Entrada:" ,m)

if (m == "lobo"):
	print("Casa: Stark")
elif (m == "leao"):
	print("Casa: Lannister")
elif (m == "veado"):
	print("Casa: Baratheon")
elif (m == "dragao"):
	print("Casa: Targaryen")
elif (m == "rosa"):
	print("Casa: Tyrell")
elif (m == "sol"):
	print("Casa: Martell")
elif (m == "lula"):
	print("Casa: Greyjoy")
elif (m == "esfolado"):
	print("Casa: Bolton")
elif (m == "turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- EXECUTION TIME:
0.209613
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:12:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("CRLHHHHHHH: ")
print("Entrada:" ,m)

if (m == "lobo"):
	print("Casa: Stark")
elif (m == "leao"):
	print("Casa: Lannister")
elif (m == "veado"):
	print("Casa: Baratheon")
elif (m == "dragao"):
	print("Casa: Targaryen")
elif (m == "rosa"):
	print("Casa: Tyrell")
elif (m == "sol"):
	print("Casa: Martell")
elif (m == "lula"):
	print("Casa: Greyjoy")
elif (m == "esfolado"):
	print("Casa: Bolton")
elif (m == "turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:13:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input(":")
print("Entrada:" ,m)

if (m == "lobo"):
	print("Casa: Stark")
elif (m == "leao"):
	print("Casa: Lannister")
elif (m == "veado"):
	print("Casa: Baratheon")
elif (m == "dragao"):
	print("Casa: Targaryen")
elif (m == "rosa"):
	print("Casa: Tyrell")
elif (m == "sol"):
	print("Casa: Martell")
elif (m == "lula"):
	print("Casa: Greyjoy")
elif (m == "esfolado"):
	print("Casa: Bolton")
elif (m == "turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:13:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input(":")
print("Entrada:" ,m)

if (m == "lobo"):
	print("Casa: Stark")
elif (m == "leao"):
	print("Casa: Lannister")
elif (m == "veado"):
	print("Casa: Baratheon")
elif (m == "dragao"):
	print("Casa: Targaryen")
elif (m == "rosa"):
	print("Casa: Tyrell")
elif (m == "sol"):
	print("Casa: Martell")
elif (m == "lula"):
	print("Casa: Greyjoy")
elif (m == "esfolado"):
	print("Casa: Bolton")
elif (m == "turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- EXECUTION TIME:
0.179385
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:13:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("")
print("Entrada:" ,m)

if (m == "lobo"):
	print("Casa: Stark")
elif (m == "leao"):
	print("Casa: Lannister")
elif (m == "veado"):
	print("Casa: Baratheon")
elif (m == "dragao"):
	print("Casa: Targaryen")
elif (m == "rosa"):
	print("Casa: Tyrell")
elif (m == "sol"):
	print("Casa: Martell")
elif (m == "lula"):
	print("Casa: Greyjoy")
elif (m == "esfolado"):
	print("Casa: Bolton")
elif (m == "turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:13:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("")
print("Entrada:" ,m)

if (m == "lobo"):
	print("Casa: Stark")
elif (m == "leao"):
	print("Casa: Lannister")
elif (m == "veado"):
	print("Casa: Baratheon")
elif (m == "dragao"):
	print("Casa: Targaryen")
elif (m == "rosa"):
	print("Casa: Tyrell")
elif (m == "sol"):
	print("Casa: Martell")
elif (m == "lula"):
	print("Casa: Greyjoy")
elif (m == "esfolado"):
	print("Casa: Bolton")
elif (m == "turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- EXECUTION TIME:
0.196212
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:13:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("oporra: ")
print("Entrada:" ,m)

if (m == "lobo"):
	print("Casa: Stark")
elif (m == "leao"):
	print("Casa: Lannister")
elif (m == "veado"):
	print("Casa: Baratheon")
elif (m == "dragao"):
	print("Casa: Targaryen")
elif (m == "rosa"):
	print("Casa: Tyrell")
elif (m == "sol"):
	print("Casa: Martell")
elif (m == "lula"):
	print("Casa: Greyjoy")
elif (m == "esfolado"):
	print("Casa: Bolton")
elif (m == "turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:14:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("oporra: ")
print("Entrada:" ,m)

if (m == "lobo"):
	print("Casa: Stark")
elif (m == "leao"):
	print("Casa: Lannister")
elif (m == "veado"):
	print("Casa: Baratheon")
elif (m == "dragao"):
	print("Casa: Targaryen")
elif (m == "rosa"):
	print("Casa: Tyrell")
elif (m == "sol"):
	print("Casa: Martell")
elif (m == "lula"):
	print("Casa: Greyjoy")
elif (m == "esfolado"):
	print("Casa: Bolton")
elif (m == "turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- EXECUTION TIME:
0.215478
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 13:16:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("oporra: ")
print("Entrada:" ,m)

if (m == "lobo"):
	print("Casa: Stark")
elif (m == "leao"):
	print("Casa: Lannister")
elif (m == "veado"):
	print("Casa: Baratheon")
elif (m == "dragao"):
	print("Casa: Targaryen")
elif (m == "rosa"):
	print("Casa: Tyrell")
elif (m == "sol"):
	print("Casa: Martell")
elif (m == "lula"):
	print("Casa: Greyjoy")
elif (m == "esfolado"):
	print("Casa: Bolton")
elif (m == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 13:16:21) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades
m=input("oporra: ")
print("Entrada:" ,m)

if (m == "lobo"):
	print("Casa: Stark")
elif (m == "leao"):
	print("Casa: Lannister")
elif (m == "veado"):
	print("Casa: Baratheon")
elif (m == "dragao"):
	print("Casa: Targaryen")
elif (m == "rosa"):
	print("Casa: Tyrell")
elif (m == "sol"):
	print("Casa: Martell")
elif (m == "lula"):
	print("Casa: Greyjoy")
elif (m == "esfolado"):
	print("Casa: Bolton")
elif (m == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.227822
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
